--- a/iSalon/nbproject/private/private.properties
+++ b/iSalon/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\A\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3386126136.properties
+deploy.ant.properties.file=C:\\Users\\DRA ELIA PALACIOS\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-966471499.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/A/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files (x86)/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-4.1.1\\glassfish;C:\\Program Files (x86)\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.1.1
+j2ee.server.domain=C:/Users/DRA ELIA PALACIOS/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\A\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\DRA ELIA PALACIOS\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
